--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "@types/react-dom": "^18",
     "genkit-cli": "^1.8.0",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "4.0.0-alpha.13",
     "typescript": "^5"
   }
 }
