--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "@types/react-dom": "^18.3.0",
     "genkit-cli": "^1.8.0",
     "postcss": "^8.4.40",
-    "tailwindcss": "4.0.0-alpha.13",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.5.4"
   }
 }
